# princetonpy.org

./: .env.dev  .env.docker  .env.docker.db  .env.docker.web  .env.local  .example.env.dev  .gitignore  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  run_local.sh  run_migrations.sh
app/: Dockerfile  Dockerfile-cron.prod  Dockerfile.prod  crontab.yaml  entrypoint-cron.prod.sh  entrypoint.prod.sh  entrypoint.sh  gunicorn.conf.py  justfile  manage.py  meetings.pkl  pyproject.toml  pytest.ini  requirements.txt  schedule.py
app/customadmin/management/commands/: subscriptions.py
app/emails/: admin.py  handlers.py  models.py
app/emails/migrations/: 0001_initial.py
app/homepage/: admin.py  models.py  schedule.py  validators.py  views.py
app/homepage/migrations/: 0001_initial.py  0002_alter_meetinglink_id.py  0003_alter_meetinglink_id.py
app/homepage/static/css/: jitsi.css
app/homepage/templates/: base.html  index.html  jitsi.html  nav.html
app/meetings/: admin.py  feeds.py  models.py  renderers.py  test_renderers.py  views.py
app/meetings/migrations/: 0001_initial.py  0002_auto_20211018_0334.py  0003_auto_20211020_0035.py  0004_alter_meeting_announcement.py  0005_auto_20211027_0053.py  0006_auto_20211101_1440.py  0007_auto_20211105_2058.py  0008_rename_no_announcement_meeting_tba.py
app/meetings/static/css/: base.css  meeting_list.css
app/meetings/templates/: meeting.html  meeting_list.html  tba.html
app/pages/: index.html
app/princetonpy/: announcements.py  asgi.py  handlers.py  settings.py  urls.py  wsgi.py
app/princetonpy/cron/: backup.py
app/princetonpy/templates/: signup.html
app/princetonpy/templates/newsletter/: common.html  subscription_subscribe.html  subscription_subscribe_email_sent.html  subscription_update.html
app/princetonpy/templates/newsletter/message/: feed.html  message.html
app/princetonpy/templates/newsletter/message/princetonpy/: subscribe.html  subscribe.txt
caddy/: Caddyfile  Caddyfile.dev  Caddyfile.docker  instructions.md
devops/: install_caddy_symlink.sh  install_scripts.sh  install_sudoers.sh  install_systemd_units.sh  (+1 more)
nginx/: Dockerfile  (+2 more)
(+17 files in other folders)
