[tool.poetry]
name = "princetonpy"
version = "0.1.0"
description = "A website for the Princeton Python users group."
authors = ["mhadam <michael@hadam.us>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
psycopg2-binary = "^2.8.6"
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
django-ses = {extras = ["bounce"], version = "^1.0.3"}
django-newsletter = "^0.9.1"
django-tinymce = "^3.2.0"
sorl-thumbnail = "^12.7.0"
psycogreen = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
